# anti-forbes-list

./: .env.example  .gitignore  METHODOLOGY.md  README.md  next.config.ts  package-lock.json  package.json
.claude/: launch.json
.github/workflows/: ci.yml  daily-baseline.yml
app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
app/about/: page.tsx
app/api/health/: route.ts
app/founder/[slug]/: opengraph-image.tsx  page.tsx
app/methodology/: page.tsx
components/: LeaderboardTable.tsx
data/curated/companies/: airbnb.yaml  alphabet.yaml  amazon.yaml  berkshire.yaml  blackstone.yaml  block.yaml  coinbase.yaml  dell.yaml  doordash.yaml  dropbox.yaml  interactive-brokers.yaml  meta.yaml  microsoft.yaml  netflix.yaml  nike.yaml  nvidia.yaml  oracle.yaml  palantir.yaml  salesforce.yaml  snap.yaml  spacex.yaml  tesla.yaml  walmart.yaml  workday.yaml  zscaler.yaml
data/derived/: baseline.json
data/fixtures/: golden.json
data/raw/: WCandRets.100years.xlsx  WealthCreation.2024.labeled.xlsx  baseline_closes_2025.json  bessembinder_roster_2025.json  bessembinder_targets.json  ciks.json  forbes_uris.json
lib/: data.ts  og.ts  ranking.ts
lib/compute/: wcfo.test.ts  wcfo.ts
lib/sources/: live.ts
pipeline/: pyproject.toml
pipeline/notebooks/: prototype_validation.py
pipeline/src/afl_pipeline/: __init__.py  build_baseline.py  compute.py  models.py  qa.py
pipeline/src/afl_pipeline/sources/: bessembinder.py  edgar.py  forbes.py  prices.py
pipeline/tests/: test_compute.py  test_models.py  test_qa.py
(+31 files in other folders)
